apps/bazarr/ingress-bazarr-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr-tailscale
  namespace: media
  annotations:
    tailscale.com/tags: "tag:k8s-operator"
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: bazarr
      port:
        number: 6767
  tls:
    - hosts:
        - bazarr
